Panda final code

--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
      <div>
       <h1>Lets Stay In touch</h1>
       <p>Get updates on sales,special and more </p>
-      <input type="text" placeholder="Your email">
+      <input class="form-control" type="text" placeholder="Your email">
       <br>
       <button class="btn btn-warning">Submit</button>
      </div>
